mapnik (2.0.1+ds1-1) UNRELEASED; urgency=low

  * New upstream version
  * Switch debian/watch to github tags
  * debian/patches/:
    - 02-fix_FTBFS_binutils-gold.patch refreshed
    - 03-fix_ImportError_mips.patc, 03-fix_big-endian.patch and
      04-port_to_new_boost.patch removed
  * Python bindings testsuite temporarily disabled

 -- David Paleino <dapal@debian.org>  Fri, 25 May 2012 19:00:10 +0200

mapnik (2.0.0+ds1-3) unstable; urgency=low

  * Fix wrong linkage against boost_python-py2*

 -- David Paleino <dapal@debian.org>  Tue, 25 Oct 2011 22:20:35 +0200

mapnik (2.0.0+ds1-2) unstable; urgency=low

  * 03-fix_big-endian.patch added: the variable for big-endian
    architectures was wrongly named (Closes: #644704)

 -- David Paleino <dapal@debian.org>  Sat, 08 Oct 2011 22:14:59 +0200

mapnik (2.0.0+ds1-1) unstable; urgency=low

  * New upstream version
  * Debhelper compatibility bumped to 8
  * New input plugins compiled: geos, rasterlite
  * Package switch from pysupport to dh_python2
  * Package renamed from libmapnik0.7 to libmapnik2-2.0
  * Purge debian/copyright from non-(anymore)-existing files

 -- David Paleino <dapal@debian.org>  Wed, 05 Oct 2011 13:02:49 +0200

mapnik (0.7.1-6) unstable; urgency=low

  * Get rid of obsolete libjpeg62 dependencies.
    (closes: #629970)
  * Added me to Uploaders to avoid inappropriate NMUing.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 25 Jul 2011 14:14:28 +0200

mapnik (0.7.1-5) unstable; urgency=low

  * Correctly trap errors in debian/rules, thanks to Jakub Wilk
    (Closes: #625667)

 -- David Paleino <dapal@debian.org>  Thu, 05 May 2011 09:27:24 +0200

mapnik (0.7.1-4) unstable; urgency=low

  * 04-port_to_new_boost.patch fixes FTBFS with newer Boost::Filesystem,
    backported from upstream, thanks to Dane Springmeyer (Closes: #624934)
  * Standards-Version bump to 3.9.2, no changes needed

 -- David Paleino <dapal@debian.org>  Tue, 03 May 2011 11:04:48 +0200
