@@ -7,8 +7,9 @@ mapnik (2.0.1+ds1-1) UNRELEASED; urgency=low
     - 03-fix_ImportError_mips.patc, 03-fix_big-endian.patch and
       04-port_to_new_boost.patch removed
   * Python bindings testsuite temporarily disabled
+  * Adapt debian/rules get-orig-source target to new upstream layout
 
- -- David Paleino <dapal@debian.org>  Fri, 25 May 2012 19:00:10 +0200
+ -- David Paleino <dapal@debian.org>  Sun, 21 Apr 2013 10:27:11 +0200
 
 mapnik (2.0.0+ds1-3) unstable; urgency=low
 
